--- a/debian/control
+++ b/debian/control
@@ -3,13 +3,17 @@ Section: php
 Priority: optional
 Maintainer: Debian PHP PEAR Maintainers <pkg-php-pear@lists.alioth.debian.org>
 Uploaders: Gasol Wu <gasol.wu@gmail.com>
-Build-Depends: dh-php5, debhelper (>= 9), php5-dev, pkg-php-tools,
+Build-Depends: dh-php5,
+ debhelper (>= 9),
+ php5-dev,
  pkg-php-tools (>= 1.6~)
 Standards-Version: 3.9.4
 Homepage: http://pecl.php.net/package/yp/
 
 Package: php-yp
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${php:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${phppear:Debian-Depends}
+Recommends: ${phppear:Debian-Recommends}
+Breaks: ${phppear:Debian-Breaks}
 Description: ${phppear:summary}
  ${phppear:description}
