control: Architecture should be any

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Standards-Version: 3.9.4
 Homepage: http://pecl.php.net/package/yp/
 
 Package: php5-yp
-Architecture: all
+Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${phppear:Debian-Depends}
 Recommends: ${phppear:Debian-Recommends}
 Breaks: ${phppear:Debian-Breaks}
